create sequence author_seq start with 1 increment by 50;
create sequence creneau_sequence start with 1 increment by 1;
create table Creneaux (heureDebut timestamp(6), heureFin timestamp(6), id bigint not null, primary key (id));
create table Groupes (code varchar(255) not null, formation varchar(255), nom varchar(255), parent_code varchar(255), primary key (code));
create table Groupes_Creneaux (creneaux_id bigint not null, groupes_code varchar(255) not null);
create table Groupes_Modules (groupes_code varchar(255) not null, modules_code varchar(255) not null);
create table Groupes_Utilisateurs (etudiants_id bigint not null, groupes_code varchar(255) not null);
create table Modules (nbHeuresCM integer not null, nbHeuresTD integer not null, nbHeuresTP integer not null, code varchar(255) not null, description varchar(255), nom varchar(255), primary key (code));
create table Modules_Creneaux (creneaux_id bigint not null, modules_code varchar(255) not null);
create table Utilisateurs (dateNaissance timestamp(6), id bigint not null, DTYPE varchar(31) not null, email varchar(255), login varchar(255), nom varchar(255), password varchar(255), prenom varchar(255), primary key (id));
create table Utilisateurs_Creneaux (creneaux_id bigint not null, professeurs_id bigint not null);
create table Utilisateurs_Modules (professeurs_id bigint not null, modules_code varchar(255) not null);
alter table if exists Groupes add constraint FKc2rgb9to24dm4x0jwpchs6yso foreign key (parent_code) references Groupes;
alter table if exists Groupes_Creneaux add constraint FKl0nphse2i4lkbl87vkdlwnf48 foreign key (creneaux_id) references Creneaux;
alter table if exists Groupes_Creneaux add constraint FK63n9ie2mp5un0k83k10atwc6y foreign key (groupes_code) references Groupes;
alter table if exists Groupes_Modules add constraint FKoxv17f49toggj8p2obkwhv8je foreign key (modules_code) references Modules;
alter table if exists Groupes_Modules add constraint FKi1s36mql48b4t4o20t6taa8b2 foreign key (groupes_code) references Groupes;
alter table if exists Groupes_Utilisateurs add constraint FKrka5g9u7faymmcheky8aui0gc foreign key (etudiants_id) references Utilisateurs;
alter table if exists Groupes_Utilisateurs add constraint FK61p234pmopol5fhe5diwlq5aq foreign key (groupes_code) references Groupes;
alter table if exists Modules_Creneaux add constraint FKgya5iuhnyp7mpm1sfuwobhsff foreign key (creneaux_id) references Creneaux;
alter table if exists Modules_Creneaux add constraint FKrw8er0bonj073l4ti2aaca0t5 foreign key (modules_code) references Modules;
alter table if exists Utilisateurs_Creneaux add constraint FKkwvgm0infrs4ygsn6xhxk18t3 foreign key (creneaux_id) references Creneaux;
alter table if exists Utilisateurs_Creneaux add constraint FKmf1lc4elldya7y2abcluqbuts foreign key (professeurs_id) references Utilisateurs;
alter table if exists Utilisateurs_Modules add constraint FK3sghk2jieo06u8yfe02179dgp foreign key (modules_code) references Modules;
alter table if exists Utilisateurs_Modules add constraint FKpcwuvjbclls5tktvfdd44nowe foreign key (professeurs_id) references Utilisateurs;
create sequence author_seq start with 1 increment by 50;
create sequence creneau_sequence start with 1 increment by 1;
create table Creneaux (heureDebut timestamp(6), heureFin timestamp(6), id bigint not null, primary key (id));
create table Groupes (code varchar(255) not null, formation varchar(255), nom varchar(255), parent_code varchar(255), primary key (code));
create table Groupes_Creneaux (creneaux_id bigint not null, groupes_code varchar(255) not null);
create table Groupes_Modules (groupes_code varchar(255) not null, modules_code varchar(255) not null);
create table Groupes_Utilisateurs (etudiants_id bigint not null, groupes_code varchar(255) not null);
create table Modules (nbHeuresCM integer not null, nbHeuresTD integer not null, nbHeuresTP integer not null, code varchar(255) not null, description varchar(255), nom varchar(255), primary key (code));
create table Modules_Creneaux (creneaux_id bigint not null, modules_code varchar(255) not null);
create table Utilisateurs (dateNaissance timestamp(6), id bigint not null, DTYPE varchar(31) not null, email varchar(255), login varchar(255), nom varchar(255), password varchar(255), prenom varchar(255), primary key (id));
create table Utilisateurs_Creneaux (creneaux_id bigint not null, professeurs_id bigint not null);
create table Utilisateurs_Modules (professeurs_id bigint not null, modules_code varchar(255) not null);
alter table if exists Groupes add constraint FKc2rgb9to24dm4x0jwpchs6yso foreign key (parent_code) references Groupes;
alter table if exists Groupes_Creneaux add constraint FKl0nphse2i4lkbl87vkdlwnf48 foreign key (creneaux_id) references Creneaux;
alter table if exists Groupes_Creneaux add constraint FK63n9ie2mp5un0k83k10atwc6y foreign key (groupes_code) references Groupes;
alter table if exists Groupes_Modules add constraint FKoxv17f49toggj8p2obkwhv8je foreign key (modules_code) references Modules;
alter table if exists Groupes_Modules add constraint FKi1s36mql48b4t4o20t6taa8b2 foreign key (groupes_code) references Groupes;
alter table if exists Groupes_Utilisateurs add constraint FKrka5g9u7faymmcheky8aui0gc foreign key (etudiants_id) references Utilisateurs;
alter table if exists Groupes_Utilisateurs add constraint FK61p234pmopol5fhe5diwlq5aq foreign key (groupes_code) references Groupes;
alter table if exists Modules_Creneaux add constraint FKgya5iuhnyp7mpm1sfuwobhsff foreign key (creneaux_id) references Creneaux;
alter table if exists Modules_Creneaux add constraint FKrw8er0bonj073l4ti2aaca0t5 foreign key (modules_code) references Modules;
alter table if exists Utilisateurs_Creneaux add constraint FKkwvgm0infrs4ygsn6xhxk18t3 foreign key (creneaux_id) references Creneaux;
alter table if exists Utilisateurs_Creneaux add constraint FKmf1lc4elldya7y2abcluqbuts foreign key (professeurs_id) references Utilisateurs;
alter table if exists Utilisateurs_Modules add constraint FK3sghk2jieo06u8yfe02179dgp foreign key (modules_code) references Modules;
alter table if exists Utilisateurs_Modules add constraint FKpcwuvjbclls5tktvfdd44nowe foreign key (professeurs_id) references Utilisateurs;
create sequence author_seq start with 1 increment by 50;
create sequence creneau_sequence start with 1 increment by 1;
create table Creneaux (heureDebut timestamp(6), heureFin timestamp(6), id bigint not null, primary key (id));
create table Groupes (code varchar(255) not null, formation varchar(255), nom varchar(255), parent_code varchar(255), primary key (code));
create table Groupes_Creneaux (creneaux_id bigint not null, groupes_code varchar(255) not null);
create table Groupes_Modules (groupes_code varchar(255) not null, modules_code varchar(255) not null);
create table Groupes_Utilisateurs (etudiants_id bigint not null, groupes_code varchar(255) not null);
create table Modules (nbHeuresCM integer not null, nbHeuresTD integer not null, nbHeuresTP integer not null, code varchar(255) not null, description varchar(255), nom varchar(255), primary key (code));
create table Modules_Creneaux (creneaux_id bigint not null, modules_code varchar(255) not null);
create table Utilisateurs (dateNaissance timestamp(6), id bigint not null, DTYPE varchar(31) not null, email varchar(255), login varchar(255), nom varchar(255), password varchar(255), prenom varchar(255), primary key (id));
create table Utilisateurs_Creneaux (creneaux_id bigint not null, professeurs_id bigint not null);
create table Utilisateurs_Modules (professeurs_id bigint not null, modules_code varchar(255) not null);
alter table if exists Groupes add constraint FKc2rgb9to24dm4x0jwpchs6yso foreign key (parent_code) references Groupes;
alter table if exists Groupes_Creneaux add constraint FKl0nphse2i4lkbl87vkdlwnf48 foreign key (creneaux_id) references Creneaux;
alter table if exists Groupes_Creneaux add constraint FK63n9ie2mp5un0k83k10atwc6y foreign key (groupes_code) references Groupes;
alter table if exists Groupes_Modules add constraint FKoxv17f49toggj8p2obkwhv8je foreign key (modules_code) references Modules;
alter table if exists Groupes_Modules add constraint FKi1s36mql48b4t4o20t6taa8b2 foreign key (groupes_code) references Groupes;
alter table if exists Groupes_Utilisateurs add constraint FKrka5g9u7faymmcheky8aui0gc foreign key (etudiants_id) references Utilisateurs;
alter table if exists Groupes_Utilisateurs add constraint FK61p234pmopol5fhe5diwlq5aq foreign key (groupes_code) references Groupes;
alter table if exists Modules_Creneaux add constraint FKgya5iuhnyp7mpm1sfuwobhsff foreign key (creneaux_id) references Creneaux;
alter table if exists Modules_Creneaux add constraint FKrw8er0bonj073l4ti2aaca0t5 foreign key (modules_code) references Modules;
alter table if exists Utilisateurs_Creneaux add constraint FKkwvgm0infrs4ygsn6xhxk18t3 foreign key (creneaux_id) references Creneaux;
alter table if exists Utilisateurs_Creneaux add constraint FKmf1lc4elldya7y2abcluqbuts foreign key (professeurs_id) references Utilisateurs;
alter table if exists Utilisateurs_Modules add constraint FK3sghk2jieo06u8yfe02179dgp foreign key (modules_code) references Modules;
alter table if exists Utilisateurs_Modules add constraint FKpcwuvjbclls5tktvfdd44nowe foreign key (professeurs_id) references Utilisateurs;
