@startuml Diagramme de classes du projet PNG
class Utilisateur
{
    - numUtilisateur: UUID /'Uniquement pour notre base de donnée'/ 
    - nom: String
    - prenom: String
    - login: String
    - email: String
    - motDePasse: String
    - dateDeNaissance: Date
}

class Professeur
{
    
}

class Etudiant
{

}

Professeur --|> Utilisateur
Etudiant --|> Utilisateur

class Module
{
    - code: String
    - nom: String
    - professeurs:
    - description: String
    - heuresPrevuesCM: Integer
    - heuresPrevuesTD: Integer
    - heuresPrevuesTP: Integer
}
Module "0..*" -- "1..*" Professeur : "enseigne"

/'class Formation
{
    - code: String
    - nom: String
    - description: String
}'/


class Groupe <<Tree>>
{
    - code: String
    - nom: String
    - formation: Formation
    - etudiants: Etudiant
    - sousGroupes: Tree<Groupe>
}

Groupe "0..1 groupe parent" -- "0..* sous groupe" Groupe 
Groupe "1..*" -- "1..*" Module
Groupe "1..*" -- "0..*" Etudiant : appartient

class Creneau
{
    - id: UUID
    - heureDebut: Time
    - heureFin: Time
    - Type: String /'CM, TD, TP'/
    - Status : int

}

Creneau "0..*"  -- "0..*" Professeur
Groupe "1..*" -- "1..*" Creneau
Creneau "1..*" -- "1..*" Module : concerne

note "Un professeur ne peut avoir plusieurs créneaux au même instant t" as n1
n1 .. Creneau

class Salle {
    - code :String
    - description :String
    - capacite :Integer
}
note "Une salle ne peut avoir qu'un seul créneau à la fois" as n2
n2 .. Salle
Salle "1" -- "0..*" Creneau

class Responsable
{

}
Responsable --|> Utilisateur

class DemandeCreneau
{
    - id: UUID
    - heureDebut: Time
    - heureFin: Time
    - Type: String /'CM, TD, TP'/
    - StatusDemande : int
    - TypeDemande : int
}
DemandeCreneau "0..*" -- "0..1" Creneau : "Concerne"
 
@enduml